# image-processing

./: .gitignore  pyproject.toml
lab1/: main.py
lab2/: main.py
lab3/: main.py
lab4/: main.py
lab5/: main.py
lab7/: main.py
